##Version 1.3 Update Changes: - added various configuration possibilities like changing sound or messages    - added various commands for changing some settings - added a Subcommand Handler - added a DebugMode for debugging the plugin

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,15 @@
 main: at.raphy02.elevator.main.Main
-name: Elevator
-version: 1.2
-description: DESCRIPTION
-author: raphy02
+name: SimpleElevator
+version: 1.3
+description: This is a plugin for fast traveling up and down with elevators.
+api-version: 1.13
+author: raphy_02
 webiste: www.raphaelbernhart.at
+
+commands:
+  elevator:
+    description: Sets various settings
+    aliases:
+      - simpleelevator
+      - se
+      - ev
